mysqlDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      env: testing
  template:
    metadata:
      name: mysql-pod
      labels:
        env: testing
        app: mysql-pod
    spec:
      containers:
      - name: mysql-pod
        image: mysql
