consulSerice.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-service
spec:
  selector:
    app: consul
  ports:
    - protocol: TCP
      port: 8500
      targetPort: 8500
