mysqlService.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    name: k8s-mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-pod
  type: ClusterIP
