phpservice.yml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  labels:
    env: testing
    region: IN
spec:
  selector:
    env: testing
  type: NodePort
  ports:
    - nodePort: 32100
      port: 80
      targetPort: 80
