service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service1
  labels:
    env: testing
    region: IN
spec:
  selector:
    env: testing
  type: NodePort
  ports:
    - nodePort: 31200
      port: 80
      targetPort: 80
