userService.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: usersvc
  ports:
    - protocol: TCP
      name: usergrpc
      port: 7000
      targetPort: 7000
    - protocol: TCP
      name: userexternal
      port: 7001
      targetPort: 7001
    - protocol: TCP
      name: userinternal
      port: 7002
      targetPort: 7002
